Working with SQL Server and the Entity Framework Core

--- a/OdeToFood/appsettings.json
+++ b/OdeToFood/appsettings.json
@@ -5,5 +5,8 @@
     }
   },
   "AllowedHosts": "*",
-  "Message":  "Hello from appsettings!"
+  "Message": "Hello from appsettings!",
+  "ConnectionStrings": {
+    "OdeToFoodDb":  "Data Source=MSI\\SQLEXPRESS;Initial Catalog=OdeToFood;Integrated Security=True;"
+  }
 }
